# beget-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: api-coverage.md
scripts/: smoke_test.py
src/mcp_beget/: __init__.py  __main__.py  app.py  client.py  config.py  errors.py  server.py
src/mcp_beget/tools/: __init__.py  account.py  annotations.py  backup.py  cron.py  dns.py  domains.py  ftp.py  mail.py  mysql.py  sites.py
tests/: conftest.py  test_client.py  test_cron.py  test_dns.py  test_domains.py  test_mail.py
